# django-oscar

./: .coveragerc  .dockerignore  .editorconfig  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .vagrant  AGENTS.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.sandbox  FEATURES.rst  IDEAS  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  NOTES  Procfile  README.MD  README.md  README.rst  ROADMAP.rst  SECURITY.md  TODO  TODO.branch  TODO.django-tables2  Test.java  Vagrantfile  _config.yml  (+42 more)
pr-agent/: .dockerignore  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.github_action  Dockerfile.github_action_dockerhub  MANIFEST.in  README.md  RELEASE_NOTES.md  SECURITY.md  action.yaml  codecov.yml  pr_compliance_checklist.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
pr-agent/.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  miscellaneous.yml
pr-agent/.github/workflows/: build-and-test.yaml  code_coverage.yaml  docs-ci.yaml  e2e_tests.yaml  pr-agent-review.yaml  pre-commit.yml
pr-agent/docker/: Dockerfile  Dockerfile.lambda
pr-agent/docs/: README.md  mkdocs.yml
pr-agent/docs/docs/: CNAME  index.md
pr-agent/docs/docs/ai_search/: index.md
pr-agent/docs/docs/chrome-extension/: data_privacy.md  features.md  index.md  options.md
pr-agent/docs/docs/core-abilities/: auto_approval.md  auto_best_practices.md  chat_on_code_suggestions.md  code_validation.md  compression_strategy.md  dynamic_context.md  fetching_ticket_context.md  high_level_suggestions.md  impact_evaluation.md  incremental_update.md  index.md  interactivity.md  metadata.md  rag_context_enrichment.md  self_reflection.md  static_code_analysis.md
pr-agent/docs/docs/css/: custom.css
pr-agent/docs/docs/faq/: index.md
pr-agent/docs/docs/installation/: azure.md  bitbucket.md  gitea.md  github.md  gitlab.md  index.md  locally.md  pr_agent.md  qodo_merge.md
pr-agent/docs/docs/overview/: data_privacy.md  pr_agent_pro.md
pr-agent/docs/docs/pr_benchmark/: index.md
pr-agent/docs/docs/recent_updates/: index.md
pr-agent/docs/docs/tools/: analyze.md  ask.md  ci_feedback.md  compliance.md  custom_labels.md  custom_prompt.md  describe.md  documentation.md  help.md  help_docs.md  improve.md  (+10 more)
pr-agent/docs/overrides/: main.html
pr-agent/github_action/: entrypoint.sh
pr-agent/pr_agent/: cli.py  cli_pip.py
pr-agent/pr_agent/algo/: git_patch_processing.py  pr_processing.py  token_handler.py  utils.py
pr-agent/pr_agent/git_providers/: __init__.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_provider.py  gerrit_provider.py  github_provider.py  utils.py
pr-agent/pr_agent/identity_providers/: identity_provider.py
pr-agent/pr_agent/secret_providers/: aws_secrets_manager_provider.py  google_cloud_storage_secret_provider.py
pr-agent/pr_agent/servers/: atlassian-connect-qodo-merge.json  atlassian-connect.json  azuredevops_server_webhook.py  bitbucket_app.py  gitea_app.py  github_action_runner.py  github_lambda_webhook.py  github_polling.py  gitlab_lambda_webhook.py  gunicorn_config.py
pr-agent/pr_agent/settings/: configuration.toml  generated_code_ignore.toml  language_extensions.toml  pr_add_docs.toml  pr_description_prompts.toml  pr_help_prompts.toml  pr_update_changelog_prompts.toml
pr-agent/pr_agent/tools/: pr_description.py  pr_generate_labels.py  pr_help_docs.py  pr_help_message.py  ticket_pr_compliance_check.py
pr-agent/tests/e2e_tests/: e2e_utils.py  langchain_ai_handler.py  test_bitbucket_app.py  test_gitea_app.py  test_github_app.py  test_gitlab_webhook.py
pr-agent/tests/health_test/: main.py
pr-agent/tests/unittest/: test_add_docs_trigger.py  test_aws_secrets_manager_provider.py  test_azure_devops_parsing.py  test_bitbucket_provider.py  test_clip_tokens.py  test_codecommit_client.py  test_codecommit_provider.py  test_config_loader_secrets.py  test_convert_to_markdown.py  test_delete_hunks.py  test_extend_patch.py  test_fetching_sub_issues.py  test_file_filter.py  test_find_line_number_of_relevant_line_in_file.py  test_fix_json_escape_char.py  test_fix_output.py  test_get_max_tokens.py  test_gitea_provider.py  test_github_action_output.py  test_gitlab_provider.py  test_handle_patch_deletions.py  test_ignore_repositories.py  test_language_handler.py  test_load_yaml.py  test_parse_code_suggestion.py  test_pr_update_changelog.py  test_secret_provider_factory.py  test_try_fix_yaml.py
(+4473 files in other folders)
